--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ before_script:
 
 script:
   - vendor/bin/phpunit
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT}
