--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ services:
 
 before_script:
   - composer install --no-interaction
+  - docker build --no-cache -t ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT} .
+  - docker run ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT} /go/src/github.com/kainlite/whatismyip-go/whatismyip-go.test
+  - docker run -d -p 127.0.0.1:8000:8000 ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT}
 
 script:
   - vendor/bin/phpunit
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push fabiandevia/php_ejemplo.final:tagname
+  - docker push ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT}
