--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ before_script:
 script:
   - vendor/bin/phpunit
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push fabiandevia/php_ejemplo.final
