--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ php:
   
 services:
   - docker
+  
+before_install:
+  - docker build -t fabiandevia/php_ejemplo.final .
 
 before_script:
   - composer install --no-interaction
+  - docker images fabiandevia/php_ejemplo.final
 
 script:
   - vendor/bin/phpunit
