--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,9 @@ before_script:
 
 script:
   - vendor/bin/phpunit
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push fabiandevia/php_ejemplo.final
+
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push fabiandevia/php_ejemplo.final;
+    fi
