--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,13 @@ services:
   - docker
   
 before_install:
-  - docker build -t "$TRAVIS_BRANCH" .
+  - docker build -t ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT} .
 
 before_script:
   - composer install --no-interaction
-  - docker images "$TRAVIS_BRANCH"
+  - docker images ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT}
 
 script:
   - vendor/bin/phpunit
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - if [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-  make deploy; else make test; fi
+  - docker push ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT}
