--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,4 @@ before_script:
 
 script:
   - vendor/bin/phpunit
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT}
+  - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD && make push-image
