--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
   - docker
   
 before_install:
+  - apt-get -y install libxslt-dev
   - docker build -t ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT} .
 
 before_script:
