--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ before_script:
 
 script:
   - vendor/bin/phpunit
-  - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD && make push-image
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push ${TRAVIS_REPO_SLUG}:${TRAVIS_COMMIT}
